--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -104,6 +104,7 @@ footer {
       margin-left: 15px;
     }
   }
+}
 
 
 /* sidebar */
@@ -172,4 +173,18 @@ input {
   }
 }
 
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
 }
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+
