--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -143,8 +143,19 @@ aside {
 .gravatar_edit {
   margin-top: 15px;
 }
+.users{
+  border-collapse: collapse;
+  width: 1100px;  
+  height: 100px;
+  th {
+  background-color: #cccccc;
+  text-align: center;
+  }
+  td {
+    text-align: center;
 
-
+  }
+}
 /* forms */
 
 input, textarea, select, .uneditable-input {
@@ -185,16 +196,6 @@ input {
 #session_remember_me {
   width: auto;
   margin-left: 0;
-}
-
-.users {
-  list-style: none;
-  margin: 0;
-  li {
-    overflow: auto;
-    padding: 10px 0;
-    border-bottom: 1px solid $gray-lighter;
-  }
 }
 
 /* microposts */
