--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,7 +16,7 @@
 <% else %>
 
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>また君か壊れるなあ・・・</h1>
 
   <h2>
     This is the home page for the
@@ -24,12 +24,14 @@
     sample application.
   </h2>
 
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+  <%= link_to "入って、どうぞ", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt: "Rails logo"),
             'http://rubyonrails.org/' %>
 
 <%= link_to image_tag("kitten.jpg", alt: "Kitten"),
+            'http://rubyonrails.org/' %>
+<%= link_to image_tag("katyo.jpg", alt: "Kitten"),
             'http://rubyonrails.org/' %>
 <% end %>
