--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
-<li>
-  <%= gravatar_for user, size: 50 %>
+<tr>
+  <td>
   <%= link_to user.name, user %>
-  <% if current_user.admin? && !current_user?(user) %>
-    | <%= link_to "delete", user, method: :delete,
-                                  data: { confirm: "You sure?" } %>
+  </td>
+  <% (Date.today..Date.today+7).each do |today| %>
+  <td> # </td>
   <% end %>
 </li>
